--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -34,7 +34,7 @@ package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
-launcher_icons/main_192x192=""
+launcher_icons/main_192x192="res://1517788487669.jpeg"
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 graphics/opengl_debug=false
@@ -58,9 +58,9 @@ permissions/access_coarse_location=false
 permissions/access_fine_location=false
 permissions/access_location_extra_commands=false
 permissions/access_mock_location=false
-permissions/access_network_state=false
+permissions/access_network_state=true
 permissions/access_surface_flinger=false
-permissions/access_wifi_state=false
+permissions/access_wifi_state=true
 permissions/account_manager=false
 permissions/add_voicemail=false
 permissions/authenticate_accounts=false
@@ -119,7 +119,7 @@ permissions/install_location_provider=false
 permissions/install_packages=false
 permissions/install_shortcut=false
 permissions/internal_system_window=false
-permissions/internet=false
+permissions/internet=true
 permissions/kill_background_processes=false
 permissions/location_hardware=false
 permissions/manage_accounts=false
@@ -199,3 +199,43 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.1]
+
+name="Linux/X11"
+platform="Linux/X11"
+runnable=true
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../xport.x86_64"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+debug/export_console_wrapper=1
+binary_format/embed_pck=false
+texture_format/bptc=true
+texture_format/s3tc=true
+texture_format/etc=true
+texture_format/etc2=false
+binary_format/architecture="x86_64"
+ssh_remote_deploy/enabled=false
+ssh_remote_deploy/host="user@host_ip"
+ssh_remote_deploy/port="22"
+ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_scp=""
+ssh_remote_deploy/run_script="#!/usr/bin/env bash
+export DISPLAY=:0
+unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
+\"{temp_dir}/{exe_name}\" {cmd_args}"
+ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
+kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
+rm -rf \"{temp_dir}\""
